...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginBottom="20dp">

<LinearLayout
    android:id="@+id/taskbar"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_rectangle_card">

...
        app:layout_constraintLeft_toLeftOf="parent"
        />



    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="none">
...
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generalTitle"
        app:layout_constraintLeft_toLeftOf="parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/year2019"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="60dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
...



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/year2018"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/year2017"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="60dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
...



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/year2016"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="60dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
...
