<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviousRulesActivity">

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_card_previous">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pic_science"
                    android:background="@drawable/background"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp">

                </TextView>
                <LinearLayout
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="left"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="0dp">

                    <!--<TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="match_parent"
                        android:text="Select faculty"
                        android:gravity="center_vertical"
                        android:textColor="#fff"
                        android:layout_marginLeft="0dp"
                        android:textSize="18sp" />-->

                    <Spinner
                        android:id="@+id/faculty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="#fff"
                        android:foregroundTint="#fff"
                        android:theme="@style/Base.DialogWindowTitle.AppCompat" />


                </LinearLayout>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/science"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="121dp">

        <ListView
            android:id="@+id/science_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            ></ListView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>